--- a/SystemVedio/Info.plist
+++ b/SystemVedio/Info.plist
@@ -41,7 +41,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    
     <key>NSCameraUsageDescription</key>
     <string>需要您的同意才能使用相机</string>
+    
+    <key>NSMicrophoneUsageDescription</key>
+    <string>需要您的同意才能访问麦克风</string>
 </dict>
 </plist>
